--- a/Ketch/UserInterface/Signup/SignupView.xib
+++ b/Ketch/UserInterface/Signup/SignupView.xib
@@ -12,8 +12,6 @@
         </mutableArray>
         <mutableArray key="TransatTextStandard.otf">
             <string>TransatTextStandard</string>
-            <string>TransatTextStandard</string>
-            <string>TransatTextStandard</string>
         </mutableArray>
     </customFonts>
     <objects>
@@ -23,33 +21,40 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TransparentView" customModule="Ketch" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="L" textAlignment="center" lineBreakMode="clip" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="nu5-Dd-8Z5">
                     <rect key="frame" x="129" y="147" width="117" height="152"/>
                     <fontDescription key="fontDescription" name="KetchIcon-Regular" family="KetchIcon" pointSize="76"/>
-                    <color key="textColor" red="0.050980392159999999" green="0.3921568627" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="textColor" red="0.94117647058823528" green="0.98039215686274506" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="awQ-vi-2op">
-                    <rect key="frame" x="90" y="339" width="195" height="38"/>
-                    <string key="text">Thats how easy it is to
-find the one with Ketch.</string>
-                    <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="19"/>
-                    <color key="textColor" red="0.050980392156862744" green="0.39215686274509803" blue="0.53725490196078429" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="awQ-vi-2op" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
+                    <rect key="frame" x="55" y="339" width="265" height="46"/>
+                    <attributedString key="attributedText">
+                        <fragment>
+                            <string key="content">Ketch helps you find a cool date,
+get ready for it and have fun!</string>
+                            <attributes>
+                                <color key="NSColor" red="0.94117647059999998" green="0.98039215690000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <font key="NSFont" size="19" name="TransatTextStandard"/>
+                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" minimumLineHeight="23"/>
+                            </attributes>
+                        </fragment>
+                    </attributedString>
                     <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signup now to play." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3jU-As-B9B">
-                    <rect key="frame" x="107" y="385" width="160" height="19"/>
-                    <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="19"/>
-                    <color key="textColor" red="0.050980392159999999" green="0.3921568627" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
+                            <real key="value" value="19"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="TransatTextStandard"/>
+                    </userDefinedRuntimeAttributes>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SdM-8k-H6p" customClass="DesignableButton" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="62" y="428" width="250" height="55"/>
-                    <color key="backgroundColor" red="0.23137254901960785" green="0.34901960784313724" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="250" id="SSN-ig-Qsc"/>
                         <constraint firstAttribute="height" constant="55" id="nLs-gP-366"/>
@@ -62,7 +67,13 @@ find the one with Ketch.</string>
                     </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="7"/>
+                            <real key="value" value="28"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="3"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" red="0.94117647059999998" green="0.98039215690000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                     <connections>
@@ -74,22 +85,20 @@ find the one with Ketch.</string>
                     <string key="text">We never post anything, 
 you got nothing to worry about.</string>
                     <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="14"/>
-                    <color key="textColor" red="0.050980392159999999" green="0.3921568627" blue="0.53725490200000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="textColor" red="0.94117647059999998" green="0.98039215690000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.94117647058823528" green="0.98039215686274506" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.2627450980392157" green="0.87058823529411766" blue="0.86274509803921573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="4AJ-Q8-LAW" firstAttribute="top" secondItem="SdM-8k-H6p" secondAttribute="bottom" constant="12" id="6mL-8t-RvF"/>
                 <constraint firstItem="4AJ-Q8-LAW" firstAttribute="centerX" secondItem="SdM-8k-H6p" secondAttribute="centerX" id="8HU-oF-OJ8"/>
-                <constraint firstItem="SdM-8k-H6p" firstAttribute="top" secondItem="3jU-As-B9B" secondAttribute="bottom" constant="24" id="CV2-8Z-TT7"/>
                 <constraint firstItem="awQ-vi-2op" firstAttribute="centerX" secondItem="nu5-Dd-8Z5" secondAttribute="centerX" id="CaG-Fu-Jgq"/>
                 <constraint firstAttribute="centerX" secondItem="nu5-Dd-8Z5" secondAttribute="centerX" id="JfZ-fT-7Pd"/>
+                <constraint firstItem="SdM-8k-H6p" firstAttribute="top" secondItem="awQ-vi-2op" secondAttribute="bottom" constant="43" id="TDD-hp-Flf"/>
                 <constraint firstItem="awQ-vi-2op" firstAttribute="top" secondItem="nu5-Dd-8Z5" secondAttribute="bottom" constant="40" id="Xed-vH-XKf"/>
                 <constraint firstAttribute="centerY" secondItem="nu5-Dd-8Z5" secondAttribute="centerY" constant="110" id="YZf-HW-xfU"/>
-                <constraint firstItem="3jU-As-B9B" firstAttribute="centerX" secondItem="SdM-8k-H6p" secondAttribute="centerX" id="ceQ-xu-LZB"/>
-                <constraint firstItem="3jU-As-B9B" firstAttribute="top" secondItem="awQ-vi-2op" secondAttribute="bottom" constant="8" id="dxi-hj-YKF"/>
-                <constraint firstItem="3jU-As-B9B" firstAttribute="centerX" secondItem="awQ-vi-2op" secondAttribute="centerX" id="wPw-LT-bWa"/>
+                <constraint firstItem="SdM-8k-H6p" firstAttribute="centerX" secondItem="awQ-vi-2op" secondAttribute="centerX" constant="-0.5" id="vzV-9I-YVq"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
             <point key="canvasLocation" x="392.5" y="487.5"/>
