--- a/Ketch/Base.lproj/Main.storyboard
+++ b/Ketch/Base.lproj/Main.storyboard
@@ -4,11 +4,151 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <customFonts key="customFonts">
+        <mutableArray key="KetchIcon.otf">
+            <string>KetchIcon-Regular</string>
+            <string>KetchIcon-Regular</string>
+        </mutableArray>
         <mutableArray key="TransatTextBold.otf">
             <string>TransatTextBold</string>
         </mutableArray>
+        <mutableArray key="TransatTextStandard.otf">
+            <string>TransatTextStandard</string>
+            <string>TransatTextStandard</string>
+        </mutableArray>
     </customFonts>
     <scenes>
+        <!--No Game View Controller-->
+        <scene sceneID="Ib8-KQ-QBa">
+            <objects>
+                <viewController id="0F9-rn-XRN" customClass="NoGameViewController" customModule="Ketch" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="t9l-7o-Rtd"/>
+                        <viewControllerLayoutGuide type="bottom" id="ax1-GJ-1VW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DTs-qg-EJB" customClass="TransparentView" customModule="Ketch" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C8W-mx-D3U" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
+                                <rect key="frame" x="180" y="160" width="240" height="65"/>
+                                <attributedString key="attributedText">
+                                    <fragment>
+                                        <string key="content">THE BOAT HAS
+SAILED FOR TODAY.</string>
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <font key="NSFont" size="25" name="TransatTextBlack"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="15" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
+                                        <real key="value" value="25"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="TransatTextBlack"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="fontKern">
+                                        <real key="value" value="2"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Why not ask a match to a date instead?" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T52-Uh-0pS">
+                                <rect key="frame" x="172" y="241" width="256" height="15"/>
+                                <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mJb-C3-BeN" userLabel="Divider">
+                                <rect key="frame" x="210" y="272" width="180" height="1"/>
+                                <color key="backgroundColor" red="0.92549019610000005" green="0.97647058819999999" blue="0.96078431369999995" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="180" id="4lc-zI-5Xb"/>
+                                    <constraint firstAttribute="height" constant="1" id="Mc4-kY-pEh"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Know someone who’d be a great Ketch?" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4gQ-Xc-tOt">
+                                <rect key="frame" x="173" y="289" width="254" height="15"/>
+                                <fontDescription key="fontDescription" name="TransatTextStandard" family="Transat Text" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gz4-K8-TW5" userLabel="Share SMS">
+                                <rect key="frame" x="184" y="320" width="60" height="61"/>
+                                <state key="normal" image="game-empty-share-sms">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQ7-yR-yoD" userLabel="Share Facebook">
+                                <rect key="frame" x="269" y="320" width="61" height="61"/>
+                                <state key="normal" image="game-empty-share-facebook">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mML-Qi-Zgb" userLabel="Share Twitter">
+                                <rect key="frame" x="355" y="320" width="60" height="61"/>
+                                <state key="normal" image="game-empty-share-twitter">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p6f-fF-OPq" userLabel="Settings">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="6H6-TX-wQa"/>
+                                    <constraint firstAttribute="height" constant="60" id="MUN-xu-jSp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="KetchIcon-Regular" family="KetchIcon" pointSize="12"/>
+                                <state key="normal" title="W">
+                                    <color key="titleColor" red="0.092987515029999995" green="0.64821720120000004" blue="0.65024715659999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Vhy-hq-gwn" kind="presentation" id="6ym-FC-Y97"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eR7-L5-Jvf" userLabel="Dock">
+                                <rect key="frame" x="520" y="0.0" width="80" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Ovf-BS-rS1"/>
+                                    <constraint firstAttribute="width" constant="80" id="QuG-Ia-9pD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="KetchIcon-Regular" family="KetchIcon" pointSize="10"/>
+                                <state key="normal" title="z">
+                                    <color key="titleColor" red="0.092987515029999995" green="0.64821720120000004" blue="0.65024715659999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="YUi-xK-iJg" kind="show" id="tnG-4w-VC3"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.26274509800000001" green="0.87058823529999996" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="C8W-mx-D3U" firstAttribute="centerX" secondItem="T52-Uh-0pS" secondAttribute="centerX" id="4ZZ-dS-0rD"/>
+                            <constraint firstItem="T52-Uh-0pS" firstAttribute="centerX" secondItem="mJb-C3-BeN" secondAttribute="centerX" id="54H-dw-jmN"/>
+                            <constraint firstItem="eR7-L5-Jvf" firstAttribute="top" secondItem="t9l-7o-Rtd" secondAttribute="bottom" id="BHO-CQ-Ms8"/>
+                            <constraint firstItem="4gQ-Xc-tOt" firstAttribute="centerX" secondItem="pQ7-yR-yoD" secondAttribute="centerX" id="F4T-Fq-pn4"/>
+                            <constraint firstItem="p6f-fF-OPq" firstAttribute="leading" secondItem="DTs-qg-EJB" secondAttribute="leading" id="JQZ-6N-D6M"/>
+                            <constraint firstItem="pQ7-yR-yoD" firstAttribute="centerY" secondItem="gz4-K8-TW5" secondAttribute="centerY" id="Pgt-NS-EOE"/>
+                            <constraint firstAttribute="trailing" secondItem="eR7-L5-Jvf" secondAttribute="trailing" id="Qyc-Ag-RWg"/>
+                            <constraint firstItem="pQ7-yR-yoD" firstAttribute="leading" secondItem="gz4-K8-TW5" secondAttribute="trailing" constant="25" id="TnT-A7-lAq"/>
+                            <constraint firstAttribute="centerX" secondItem="C8W-mx-D3U" secondAttribute="centerX" id="VEw-wx-gf0"/>
+                            <constraint firstItem="mJb-C3-BeN" firstAttribute="top" secondItem="T52-Uh-0pS" secondAttribute="bottom" constant="16" id="VkX-AD-RIR"/>
+                            <constraint firstItem="p6f-fF-OPq" firstAttribute="top" secondItem="t9l-7o-Rtd" secondAttribute="bottom" id="YQj-48-4VY"/>
+                            <constraint firstItem="T52-Uh-0pS" firstAttribute="top" secondItem="C8W-mx-D3U" secondAttribute="bottom" constant="16" id="akr-kQ-XSK"/>
+                            <constraint firstItem="pQ7-yR-yoD" firstAttribute="top" secondItem="4gQ-Xc-tOt" secondAttribute="bottom" constant="16" id="b02-Uo-gOo"/>
+                            <constraint firstItem="mML-Qi-Zgb" firstAttribute="centerY" secondItem="pQ7-yR-yoD" secondAttribute="centerY" id="eQa-h4-ylb"/>
+                            <constraint firstItem="4gQ-Xc-tOt" firstAttribute="centerX" secondItem="mJb-C3-BeN" secondAttribute="centerX" id="lHL-f2-Qxt"/>
+                            <constraint firstItem="mML-Qi-Zgb" firstAttribute="leading" secondItem="pQ7-yR-yoD" secondAttribute="trailing" constant="25" id="nBG-Kp-g8c"/>
+                            <constraint firstItem="C8W-mx-D3U" firstAttribute="top" secondItem="DTs-qg-EJB" secondAttribute="top" constant="160" id="sUA-7K-vtW"/>
+                            <constraint firstItem="4gQ-Xc-tOt" firstAttribute="top" secondItem="mJb-C3-BeN" secondAttribute="bottom" constant="16" id="tZg-Ix-882"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nQ6-Uk-dUD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="98" y="1530"/>
+        </scene>
         <!--New Connection View Controller-->
         <scene sceneID="Lfd-Nm-nb7">
             <objects>
@@ -34,13 +174,10 @@
             </objects>
             <point key="canvasLocation" x="818" y="1139"/>
         </scene>
-        <!--Your Matches-->
+        <!--Dock View Controller-->
         <scene sceneID="mW7-zq-TQ3">
             <objects>
                 <viewController storyboardIdentifier="Dock" automaticallyAdjustsScrollViewInsets="NO" id="YUi-xK-iJg" customClass="DockViewController" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Your Matches" id="n18-f6-V7D">
-                        <barButtonItem key="backBarButtonItem" title=" " id="cW2-Pa-cVe"/>
-                    </navigationItem>
                     <connections>
                         <segue destination="rRd-ZO-60U" kind="show" identifier="DockToChat" id="2kk-V8-7uA"/>
                     </connections>
@@ -109,7 +246,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wtb-Vn-cEV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="106" y="1139"/>
+            <point key="canvasLocation" x="818" y="-435"/>
         </scene>
         <!--Signup Storyboard @ Signup-->
         <scene sceneID="Dpy-Ax-4fa">
@@ -183,6 +320,7 @@
                         <segue destination="xL7-fS-abd" kind="custom" identifier="Signup_" customClass="LinkedStoryboardPushSegue" customModule="Ketch" customModuleProvider="target" id="A9d-Ac-mF2"/>
                         <segue destination="jhY-qC-hf5" kind="custom" identifier="Signup_Waitlist" customClass="LinkedStoryboardPushSegue" customModule="Ketch" customModuleProvider="target" id="cVa-Is-AY3"/>
                         <segue destination="yMw-7P-Sbk" kind="show" identifier="LoadingToNewConnection" id="lmb-Zd-YjN"/>
+                        <segue destination="0F9-rn-XRN" kind="show" identifier="LoadingToNoGame" id="TQN-XX-hdx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jpe-tJ-ggF" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -208,8 +346,14 @@
             <point key="canvasLocation" x="-69" y="630"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="game-empty-share-facebook" width="61" height="61"/>
+        <image name="game-empty-share-sms" width="60" height="61"/>
+        <image name="game-empty-share-twitter" width="60" height="61"/>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="PWk-0v-Pdh"/>
-        <segue reference="9mb-SI-KHc"/>
+        <segue reference="tnG-4w-VC3"/>
+        <segue reference="6ym-FC-Y97"/>
+        <segue reference="T9Y-bJ-q8s"/>
     </inferredMetricsTieBreakers>
 </document>
